// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Events /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={true}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="type"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            eventsType=""
            filteredData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={true}
            isLoading={true}
            isTimelinesOpen={true}
            listPerPageAmount={10}
            maxValueRange={1512922434812}
            minValueRange={1452595820958}
            offset={10}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="desc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            eventsType="Transfer"
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={false}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              eventsType="Transfer"
              isSubmit={false}
            />
          }
          currentPanel="eventsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="eventsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="eventsCreate"
          title="Create - Transfer"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with all store is empty 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={Object {}}
            eventsType=""
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={true}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            eventsType=""
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={true}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with eventsDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={false}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              eventsType={undefined}
              isSubmit={false}
            />
          }
          currentPanel="eventsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="eventsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="eventsCreate"
          title="Create - undefined"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with eventsDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={false}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              eventsType={undefined}
              isSubmit={false}
            />
          }
          currentPanel="eventsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="eventsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="eventsCreate"
          title="Create - undefined"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with eventsDetail and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            eventsType=""
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="a7007401-837f-471c-8f73-cbb53c0eb1a1"
            isBtnCreateVisible={true}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <EventsDetail
          appoitmentId={null}
          currentPanel="eventsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1512564962000,
              "dateTime": 1511339400000,
              "description": "144444",
              "name": "14444",
              "source": "marand",
              "sourceId": "a7007401-837f-471c-8f73-cbb53c0eb1a1",
              "type": "Transfer",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          joinAppointment={[Function]}
          messages={Array []}
          name="eventsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="eventPanel"
          startAppointment={[Function]}
          userAccount={
            Object {
              "email": "bob.smith@gmail.com",
              "family_name": "Smith",
              "given_name": "Bob",
              "role": "IDCR",
              "roles": Array [
                "IDCR",
              ],
              "sub": "28AD8576-1948-4C84-8B5E-55FB7EE027CE",
              "tenant": null,
            }
          }
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with eventsDetail and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <EventsDetail
          appoitmentId={null}
          currentPanel="eventsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1512564962000,
              "dateTime": 1511339400000,
              "description": "144444",
              "name": "14444",
              "source": "marand",
              "sourceId": "a7007401-837f-471c-8f73-cbb53c0eb1a1",
              "type": "Transfer",
            }
          }
          editedPanel={Object {}}
          expandedPanel="eventPanel"
          isSubmit={false}
          joinAppointment={[Function]}
          messages={Array []}
          name="eventsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="eventPanel"
          startAppointment={[Function]}
          userAccount={
            Object {
              "email": "bob.smith@gmail.com",
              "family_name": "Smith",
              "given_name": "Bob",
              "role": "IDCR",
              "roles": Array [
                "IDCR",
              ],
              "sub": "28AD8576-1948-4C84-8B5E-55FB7EE027CE",
              "tenant": null,
            }
          }
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with eventsDetail and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;

exports[`Component <Events /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <EventsListHeader
            activeView="table"
            currentPanel="eventsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            isTimelinesOpen={false}
            name="eventsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Events"
            toggleTimelinesVisibility={[Function]}
            toggleViewVisibility={[Function]}
          />
          <EventsMainPanel
            activeView="table"
            columnNameSortBy="name"
            emptyDataMessage="No events"
            eventsTimeline={
              Object {
                "1489010400000": Array [
                  Object {
                    "dateCreated": 1489229420000,
                    "dateTime": 1489056620958,
                    "dateTimeConvert": "09-Mar-2017",
                    "description": "From home",
                    "name": "Admit",
                    "sideDateInTimeline": "right",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Admission",
                  },
                ],
                "1494450000000": Array [
                  Object {
                    "dateCreated": 1494586220000,
                    "dateTime": 1494496220958,
                    "dateTimeConvert": "11-May-2017",
                    "description": "Needs nursing and supervisory care",
                    "name": "Discharge to care home",
                    "sideDateInTimeline": "left",
                    "source": "ethercis",
                    "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                    "type": "Discharge",
                  },
                ],
              }
            }
            eventsType=""
            filteredData={
              Array [
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Event Name",
                  "width": "50%",
                },
                Object {
                  "key": "type",
                  "title": "Event Type",
                  "width": "25%",
                },
                Object {
                  "key": "dateTime",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id=""
            isBtnCreateVisible={true}
            isLoading={true}
            isTimelinesOpen={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            onRangeChange={[Function]}
            resourceData={
              Array [
                Object {
                  "dateCreated": 1494586220000,
                  "dateTime": 1494496220958,
                  "dateTimeConvert": "11-May-2017",
                  "description": "Needs nursing and supervisory care",
                  "name": "Discharge to care home",
                  "sideDateInTimeline": "left",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Discharge",
                },
                Object {
                  "dateCreated": 1489229420000,
                  "dateTime": 1489056620958,
                  "dateTimeConvert": "09-Mar-2017",
                  "description": "From home",
                  "name": "Admit",
                  "sideDateInTimeline": "right",
                  "source": "ethercis",
                  "sourceId": "93ac376d-3ff4-4e0b-b080-47eb3fe81750",
                  "type": "Admission",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="events"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
